--- a/Baithak/baithak.html
+++ b/Baithak/baithak.html
@@ -66,7 +66,7 @@
 <p style="text-indent:10%;font-size:120%; color:#990000; background-color:#ccffff "><img src="p8.jpg" style="float:right;width:180px;height:160px;">Angrezi buoy. MUN freak! Can`t live without mobile and creating instagram boomerang stories. Sab iska best friend. #family</p>
 <br><br><br><br>
 <li style="color:#000099"><a name="Shashank"></a><h2 style="color:#000099; text-decoration:underline">Shashank</h2></li>
-<p style="text-indent:10%;font-size:120%; color:#990000; background-color:#ccffff "><img src="p9.jpg" style="float:right;width:180px;height:160px;"><a href="wick.html" title="Click here to treat ur eyes!">Saatwick</a> k baad sabse innocent yahi hai. Single hai. Karan Johar ka deewana hai. Basically, coolest in the group. Guitar bajane nii aata toh pic par naa jaayeien, ladki patane ka tareeka hai woh.</p>
+<p style="text-indent:10%;font-size:120%; color:#990000; background-color:#ccffff "><img src="p9.jpg" style="float:right;width:180px;height:160px;"><a href="wick.html" title="Click here to treat ur eyes!">Saatwick</a> k baad sabse innocent yahi hai. Single hai. Karan Johar ka deewana hai. Basically, coolest in the group. Guitar bajane nii aata toh pic par naa jaayeien, ladki patane ka tareeka hai woh.<br/><br/><br/><br/><br/><br/><br/></p>
 </ol>
 </body>
 </html>
